Prevent height cut off in carousel.

--- a/Resources/Public/Themes/elegance/hamag.css
+++ b/Resources/Public/Themes/elegance/hamag.css
@@ -359,6 +359,8 @@ ul.nav li:hover
 .carousel-inner > .item
 {
 	color: #111;
+	height: auto;
+	min-height: 400px;
 }
 .carousel .carousel-inner > .item
 {
